<resources>
    <string name="app_name">MVP_Food_Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailysuggest">Food You Might Like</string>
    <string name="txtcuisines">By Cuisines</string>
    <string name="txtcountry">Your Fav Country</string>
    <string name="welcome">Welcome</string>
    <string name="foodfiesta">Food Fiesta</string>
    <string name="title">Title</string>
    <string name="brief">Brief</string>
    <string name="ingrediant">Ingrediants</string>
    <string name="allingrediant">All Ingrediants</string>
    <string name="takelook">Take A Look !</string>
    <string name="ins">Instructions</string>
    <string name="fav">Favorite Meals</string>
    <string name="onthisday">On This Day</string>
    <string name="plannedmeals">Your Plan</string>
    <string name="date">Date</string>
    <string name="catFilter">Filter By Category</string>
    <string name="bying">By Ingredients</string>
    <string name="world">World Wide</string>
</resources>