<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgplan"
                android:layout_width="125dp"
                android:layout_height="121dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtPlanTitle"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/imgplan"
                app:layout_constraintTop_toTopOf="@+id/imgplan" />

            <TextView
                android:id="@+id/txtPlanCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/txtcuisines"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/txtPlanTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtPlanTitle" />

            <TextView
                android:id="@+id/txtPlanCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/txtcountry"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/txtPlanCategory"
                app:layout_constraintTop_toBottomOf="@+id/txtPlanCategory" />

            <TextView
                android:id="@+id/txtPlanDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPlanCountry" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieTrash"
                android:layout_width="51dp"
                android:layout_height="37dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imgplan"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/trash" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>